fixed main page spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -138,9 +138,11 @@
   background-color: #B0496C;
 }
 
+.main{
+  min-height: 100%;
+}
+
 #body{
-  margin-top:   -1px;
-  min-height: 100vh;
 }
 
 .embed-container {
